# SimpleAmqpClient-examples

./: .gitignore  README.md  img.proto
examples/consume/: SimpleSubscriber.h  img.pb.cc  main.cpp
examples/publisher/: CMakeLists.txt  SimplePublisher.cpp  SimplePublisher.h  img.pb.h  main.cpp
examples/receivehello/: CMakeLists.txt  SimpleSubscriber.cpp  SimpleSubscriber.h  main.cpp
examples/sendhello/: CMakeLists.txt  SimplePublisher.h  main.cpp
